made some tweaks to the AI to research frieghter holds only when the economy is doing well. Made a change to the AI tech to not build new holds unless the economy can support them. This actually speeds up hull research as the delay is not built into the script.
--HG--
branch : feature/Push here instead of develop

--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -1690,6 +1690,7 @@
     </Content>
     <Content Include="Content\EconomicResearchStrategy\Expansionists.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Content\EconomicResearchStrategy\Generalists.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -1699,6 +1700,7 @@
     </Content>
     <Content Include="Content\EconomicResearchStrategy\Militarists.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Content\EconomicResearchStrategy\Technologists.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
