--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -86,7 +86,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Crunchies-LocalRelease|x86'">
-    <OutputPath>D:\Program Files\steam\steamapps\common\StarDrive\</OutputPath>
+    <OutputPath>..\..\..\..\StarDrive\</OutputPath>
     <DefineConstants>STEAM ALTERTHREAD PERF  noAUTOTIME</DefineConstants>
     <Optimize>true</Optimize>
     <PlatformTarget>x86</PlatformTarget>
