--- a/app.config
+++ b/app.config
@@ -48,4 +48,7 @@
       </providers>
     </roleManager>
   </system.web>
+  <runtime>
+    <legacyCorruptedStateExceptionsPolicy enabled="true" />
+  </runtime>
 </configuration>
