--- a/app.config
+++ b/app.config
@@ -16,7 +16,7 @@
     <add key="ModSupport" value="true"/>
     <add key="MinimumWarpRange" value="600000"/>
     <add key="MemoryLimiter" value="300000"/>
-    <add key="ExtraNotifications" value="true"/>
+    <add key="ExtraNotifications" value="false"/>
     <add key="PauseOnNotification" value="false"/>
     <add key="ExtraPlanets" value="0"/>
     <add key="GravityWellRange" value="8000"/>
