small adjustment to movement to see if warp overshoot can be mitigated. change to AI fleet assembling to assemble in the more peaceful systems. only aggressive races will pull from defensive ships to make war fleets. try to set minimum troop strength for AI attacks. Try to make undeveloped planet use more production.
--HG--
branch : feature/Push here instead of develop

--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -231,7 +231,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'crunchies laptop debug|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\..\..\..\Program Files %28x86%29\Steam\steamapps\common\StarDrive\</OutputPath>
-    <DefineConstants>DEBUG;noPERF noAUTOTIME ALTERTHREAD STEAM  notPLAYERONLY </DefineConstants>
+    <DefineConstants>DEBUG;PERF AUTOTIME ALTERTHREAD STEAM  notPLAYERONLY </DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>full</DebugType>
