--- a/app.config
+++ b/app.config
@@ -30,6 +30,7 @@
     <add key="freighterlimit" value="50" />
     <add key="ssplimit" value="50" />
     <add key="perf" value="false" />
+    <add key="AltArcControl" value="false" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
