uploaded 721 https://bitbucket.org/CrunchyGremlin/sd-blackbox/downloads/BlackBox_RadicalElements_RC_0721.exe Fix: non visible combat doing no damage fix: mods crash on goals fix: events with sihps that arent in game crashes. double check colony type and governor on. readd locks lost in bad merge.
--HG--
branch : release/july

--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -75,7 +75,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Crunchies-Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\..\..\..\StarDrive\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;PERF ALTERTHREAD STEAM xAUTOTIME notPLAYERONLY </DefineConstants>
+    <DefineConstants>TRACE;DEBUG;ALTERTHREAD STEAM PERF AUTOTIME notPLAYERONLY </DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>full</DebugType>
